[package]
name = "chatmessage"
version = "0.0.38"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
egui = { version = "0.27", optional = true }
misanthropic = { version = "0.3", optional = true }
thiserror = "1"

[features]
default = []
misanthropic = ["dep:misanthropic"]
egui = ["dep:egui"]
client = []
server = []
dioxus = []
