[package]
name = "chatmessage"
version = "0.0.41"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
egui = { version = "0.27", optional = true }
misanthropic = { version = "0.4", optional = true }
thiserror = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[features]
default = []
misanthropic = ["dep:misanthropic"]
egui = ["dep:egui"]
client = []
server = []
